Changed mediaViewer to Alcatraz pics, minor fixes in other files
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@168 6123cefa-f26d-4250-b61a-f760f7026737

--- a/css/destinationDetail.css
+++ b/css/destinationDetail.css
@@ -25,7 +25,7 @@ h1{
     border:solid black 1px;
     height:200px;
     width:300px;
-    color:blue;
     display:inline-block;
+    background-color: #A0A0A0;
 }
 
