--- a/css/reviewSearchResult.css
+++ b/css/reviewSearchResult.css
@@ -29,3 +29,12 @@
     
 }
 
+.newDest {
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    width: 850px;
+    padding: 5px;
+
+}
