Added more information to destinationDetail.php updated its looks in destinationDetail.css
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@175 6123cefa-f26d-4250-b61a-f760f7026737

--- a/css/destinationDetail.css
+++ b/css/destinationDetail.css
@@ -5,27 +5,20 @@
     Description:
         Purpose of the stylesheet follows.
 */
-
-root { 
-    display: block;
-}
-div{
-}
-h1{
-    margin-bottom:200px;
+.blorb{
 }
 .info{
+    width:400px;
     display:inline-block;
 }
 .byline{
     color:#808080;
 }
 #photo{
+    float:left
     margin:auto;
-    border:solid black 1px;
     height:200px;
     width:300px;
     display:inline-block;
-    background-color: #A0A0A0;
 }
 
