--- a/Views/about.html
+++ b/Views/about.html
@@ -1,8 +1,43 @@
-<strong>About Us</strong><br><hr>
-SFSU <br>
-CSC 640: Software Engineering<br>
-Fall 2013<br>
-Instructors: Dr. Petkovic & Marc Sosnick<hr>
-<br>
-Team<br>
-Michael<br>Marcian<br>Jung<br>Matt<br>Khine<br>Deon<br>Rob
+<html>
+    <head>
+        <title>TRIP OUT! - About Us</title>    
+        <link rel ="stylesheet" type ="text/css" href ="../css/bootstrap.css">
+        <link rel ="stylesheet" type ="text/css" href ="../css/bootstrap-responsive.css">
+        <link rel ="stylesheet" type ="text/css" href ="../css/index.css">
+        <script src="../js/bootstrap.js"></script>
+        <script src="../js/script.js"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+         <div class ="container">
+            <nav class="navbar navbar-inverse" role="navigation">
+                <a class="navbar-brand" href="#">TRIP OUT!</a>
+                <ul class="nav navbar-nav">
+                    <li><a href="../index.php">Home</a></li>
+                    <li><a href="review.php">Write a Review</a></li>
+                    <li class="active"><a href="about.html">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+                <form class="navbar-form navbar-right">
+                    <a type="submit" class="btn btn-default" href="signIn.php">Sign In</a>
+                    <a type="submit" class="btn btn-default" href="signUp.php">Register</a>
+                </form>
+            </nav>
+            <strong>About Us</strong><br><hr>
+            SFSU <br>
+            CSC 640: Software Engineering<br>
+            Fall 2013<br>
+            Instructors: Dr. Petkovic & Marc Sosnick<hr>
+            <br>
+            Team<br>
+            Michael<br>Marcian<br>Jung<br>Matt<br>Khine<br>Deon<br>Rob
+            <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+                <div class ="footer">
+                    SFSU-FAU-FULDA joint SW Engineering Project Fall 2013
+                </div>
+            </nav>
+         </div>
+    </body>
+</html>
