--- a/Views/about.html
+++ b/Views/about.html
@@ -12,7 +12,7 @@
     <body>
          <div class ="container">
             <nav class="navbar navbar-inverse" role="navigation">
-                <a class="navbar-brand" href="#">TRIP OUT!</a>
+                <a class="navbar-brand" href="../index.php">TRIP OUT!</a>
                 <ul class="nav navbar-nav">
                     <li><a href="../index.php">Home</a></li>
                     <li><a href="review.php">Write a Review</a></li>
