added navbar and footer destinationDetail.php, mediaViewer.php, SignUp.php, updated about page.
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@188 6123cefa-f26d-4250-b61a-f760f7026737

--- a/Views/about.html
+++ b/Views/about.html
@@ -25,17 +25,22 @@
                     <a type="submit" class="btn btn-default" href="signUp.php">Register</a>
                 </form>
             </nav>
-            <strong>About Us</strong><br><hr>
-            SFSU <br>
-            CSC 640: Software Engineering<br>
-            Fall 2013<br>
+             <h3>About Us</h3><hr>
+            San Francisco State University<br>
+            Computer Science <br>
+            CSC 640: Software Engineering, Fall 2013<br>
             Instructors: Dr. Petkovic & Marc Sosnick<hr>
-            <br>
-            Team<br>
-            Michael<br>Marcian<br>Jung<br>Matt<br>Khine<br>Deon<br>Rob
+            <strong>TEAM:</strong><br>
+            Michael Santer, Team Manager<br>
+            Marcian Diamond<br>
+            Jung Kim<br>
+            Matt Rutherford<br>
+            Aye Khine<br>
+            Deon Shum<br>
+            Rob Pennock
             <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
                 <div class ="footer">
-                    SFSU-FAU-FULDA joint SW Engineering Project Fall 2013
+                    SFSU-FAU-FULDA joint SW Engineering Project Fall 2013 
                 </div>
             </nav>
          </div>
