added navbar and footer to reviewSearch.php
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@201 6123cefa-f26d-4250-b61a-f760f7026737

--- a/Views/about.html
+++ b/Views/about.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="../index.php">TRIP OUT!</a>
                 <ul class="nav navbar-nav">
                     <li><a href="../index.php">Home</a></li>
-                    <li><a href="review.php">Write a Review</a></li>
+                    <li><a href="reviewSearch.php">Write a Review</a></li>
                     <li class="active"><a href="about.html">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">FAQ</a></li>
