git-svn-id: http://sfsuswe.com/svn/f13g05/m3@215 6123cefa-f26d-4250-b61a-f760f7026737

--- a/css/searchResult.css
+++ b/css/searchResult.css
@@ -10,7 +10,7 @@
         /* position: relative; */
 	float: none;
 	/* width: 83%; */
-        width: 870px;
+        width: 900px;
         padding: 5px;
         margin-left: auto;
         margin-right: auto;
@@ -37,7 +37,7 @@
 .search_addr {
     width: 300px;
     float: right;
-    
+        
 }
 
 .newDest {
@@ -48,4 +48,11 @@
         width: 900px;
         padding: 5px;
 
+}
+
+.description {
+    float: left;
+    clear: both;
+    width: 900px;
+    
 }
