"Write a Review" button added on regular searchResult
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@226 6123cefa-f26d-4250-b61a-f760f7026737

--- a/css/searchResult.css
+++ b/css/searchResult.css
@@ -50,6 +50,16 @@
 
 }
 
+.box_button {
+    float: right;
+    width: 190px;
+    height: 100px;
+    padding-top: 10px;
+    padding-right: 10px;
+    text-align: right;
+    
+}
+
 .description {
     float: left;
     clear: both;
