--- a/css/searchResult.css
+++ b/css/searchResult.css
@@ -29,13 +29,18 @@
     margin: 5px;
 }
 
+.search_pic {
+    width: 200px;
+    float: left;
+}
+
 .search_name {
-    width: 590px;
+    width: 350px;
     float: left;
 }
 
 .search_addr {
-    width: 300px;
+    width: 350px;
     float: right;
         
 }
@@ -50,7 +55,17 @@
 
 }
 
-.box_button {
+.box_review {
+    float: right;
+    width: 190px;
+    height: 100px;
+    padding-top: 10px;
+    padding-right: 10px;
+    text-align: right;
+    
+}
+
+.box_book {
     float: right;
     width: 190px;
     height: 100px;
@@ -66,3 +81,20 @@
     width: 900px;
     
 }
+
+.showing {
+    float: right;
+    clear: left;
+}
+
+span.stars, span.stars span {
+    display: inline-block;
+    background: url(../media/images/stars.png) 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
+}
+
