Made destination detail dynamic, but still hardcoded to alcatraz fixed display bugs in css file of destination detail
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@246 6123cefa-f26d-4250-b61a-f760f7026737

--- a/css/destinationDetail.css
+++ b/css/destinationDetail.css
@@ -5,20 +5,37 @@
     Description:
         Purpose of the stylesheet follows.
 */
-.blorb{
+root { 
+    //display: block;
 }
-.info{
-    width:400px;
+div{
+}
+.top{
+    //color:blue;
+}
+#info{
+    //float:right;
+    //color:blue;
     display:inline-block;
-}
-.byline{
-    color:#808080;
+    //position:absolute;
+    margin-left:10px;
+    margin-top:-25px;
 }
 #photo{
-    float:left
-    margin:auto;
-    height:200px;
-    width:300px;
-    display:inline-block;
+    float:left;
+    //float:left;
 }
-
+#destReviews{
+    display:block;
+    clear:both;
+}
+#tooper{
+    display:block;
+}
+#media{
+    display:block;
+}
+#mainphoto{
+    margin-left:auto;
+    margin-right:auto;
+}
