--- a/Views/about.html
+++ b/Views/about.html
@@ -1,13 +1,49 @@
-<h3>About Us</h3><hr>
-San Francisco State University<br>
-Computer Science <br>
-CSC 640: Software Engineering, Fall 2013<br>
-Instructors: Dr. Petkovic & Marc Sosnick<hr>
-<strong>TEAM:</strong><br>
-Michael Santer, Team Manager<br>
-Marcian Diamond<br>
-Jung Kim<br>
-Matt Rutherford<br>
-Aye Khine<br>
-Deon Shum<br>
-Rob Pennock
+<html>
+    <head>
+        <title>TRIP OUT!</title>    
+        <link rel ="stylesheet" type ="text/css" href ="../css/bootstrap.css">
+        <link rel ="stylesheet" type ="text/css" href ="../css/bootstrap-responsive.css"> 
+        <link rel ="stylesheet" type ="text/css" href ="../css/index.css">
+        <script src="../js/bootstrap.js"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body>
+        <div class ="container">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <a class="navbar-brand" href="../index.php" id ="logo">TRIP OUT!</a>
+            <ul class="nav navbar-nav">
+                <li><a href="../index.php">Home</a></li>
+                <li><a href="reviewSearch.php">Write a Review</a></li>
+                <li><a href="createDestination.php">Create a Destination</a></li>
+                <li class ="active"><a href="">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <a class="btn btn-default" href="signIn.php">Sign In</a>
+                <a class="btn btn-default" href="signUp.php">Register</a>
+            </form>
+        </nav>
+        <h3>About Us</h3><hr>
+        San Francisco State University<br>
+        Computer Science <br>
+        CSC 640: Software Engineering, Fall 2013<br>
+        Instructors: Dr. Petkovic & Marc Sosnick<hr>
+        <strong>TEAM:</strong><br>
+        Michael Santer, Team Manager<br>
+        Marcian Diamond<br>
+        Jung Kim<br>
+        Matt Rutherford<br>
+        Aye Khine<br>
+        Deon Shum<br>
+        Rob Pennock
+        <nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+            <div class ="footer">
+                SFSU-FAU-FULDA joint SW Engineering Project Fall 2013 
+            </div>
+        </nav>
+        </div>
+        <!-- END CONTAINTER -->
+    </body>
+</html>
