--- a/css/reviewSearchResult.css
+++ b/css/reviewSearchResult.css
@@ -8,7 +8,7 @@
         margin-right: auto;
 }
 
-.box_reviewResult {
+.review_destination {
     border-bottom: solid 1px green;
     margin-left:auto;
     margin-right:auto;
@@ -17,19 +17,19 @@
     height: 140px;
 }
 
-.box_name {
+.review_name {
     float: left;
     width: 348px;
     height: 140px;
 }
 
-.box_addr {
+.review_address {
     float: left;
     width: 348px;
     height: 140px;
 }
 
-.box_button {
+.box_buttons {
     float: right;
     width: 190px;
     height: 100px;
