--- a/css/reviewSearchResult.css
+++ b/css/reviewSearchResult.css
@@ -14,19 +14,19 @@
     margin-right:auto;
     width: 900px;
     padding: 5px;
-    height: 140px;
+    height: 160px;
 }
 
 .review_name {
     float: left;
     width: 348px;
-    height: 140px;
+    height: 150px;
 }
 
 .review_address {
     float: left;
     width: 348px;
-    height: 140px;
+    height: 150px;
 }
 
 .box_buttons {
@@ -39,9 +39,23 @@
     
 }
 
+.titleShowing {
+    clear: both;
+    float: left;
+    margin-top: 1px;
+    margin-bottom: 3px;
+    width: 900px;
+    height: 50px;
+}
+
+.searchTitle {
+    float: left;
+    width: 690px;
+}
+
 .showing {
     float: right;
-    clear: left;
+    width: 200px;    
 }
 
 .newDest {
@@ -52,15 +66,4 @@
     width: 850px;
     padding: 5px;
 
-}
-
-span.stars, span.stars span {
-    display: inline-block;
-    background: url(../media/images/stars.png) 0 -16px repeat-x;
-    width: 80px;
-    height: 16px;
-}
-
-span.stars span {
-    background-position: 0 0;
 }
