created videoViewer.php to play videos from mediaViewer.  Modified VideoDAO.php to retrive video data by rel_url. Added some test videos
git-svn-id: http://sfsuswe.com/svn/f13g05/m3@351 6123cefa-f26d-4250-b61a-f760f7026737

--- a/Views/privacyPolicy.html
+++ b/Views/privacyPolicy.html
@@ -1,5 +1,6 @@
 <!-- START PRIVACY POLICY CODE -->
 <div style="font-family:Ariel">
+    <strong>TRIP OUT PRIVACY POLICY</strong><br/><br/> 
     <strong>What information do we collect?</strong> 
     <br /><br />
     We collect information from you when you register on our site or fill out a form.  
